added trycatch error for deleteItem
