# swagger.json
@@ -1,8 +1,8 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Book Club API",
-    "description": "Book Club API",
+    "title": "Pantry API",
+    "description": "Pantry API",
     "version": "1.0.0"
   },
   "host": "localhost:3000",
@@ -25,10 +25,10 @@
         }
       }
     },
-    "/members/": {
+    "/inventory/": {
       "get": {
         "tags": [
-          "Members"
+          "Inventory"
         ],
         "description": "",
         "produces": [
@@ -42,7 +42,7 @@
       },
       "post": {
         "tags": [
-          "Members"
+          "Inventory"
         ],
         "description": "",
         "parameters": [
@@ -52,13 +52,25 @@
             "schema": {
               "type": "object",
               "properties": {
-                "username": {
+                "sku": {
                   "example": "any"
                 },
-                "email": {
+                "name": {
                   "example": "any"
                 },
-                "birthday": {
+                "description": {
+                  "example": "any"
+                },
+                "unit": {
+                  "example": "any"
+                },
+                "unit_weight": {
+                  "example": "any"
+                },
+                "unit_cost": {
+                  "example": "any"
+                },
+                "stock": {
                   "example": "any"
                 }
               }
@@ -75,10 +87,10 @@
         }
       }
     },
-    "/members/{id}": {
+    "/inventory/{id}": {
       "get": {
         "tags": [
-          "Members"
+          "Inventory"
         ],
         "description": "",
         "produces": [
@@ -100,7 +112,7 @@
       },
       "put": {
         "tags": [
-          "Members"
+          "Inventory"
         ],
         "description": "",
         "parameters": [
@@ -116,13 +128,25 @@
             "schema": {
               "type": "object",
               "properties": {
-                "username": {
+                "sku": {
                   "example": "any"
                 },
-                "email": {
+                "name": {
                   "example": "any"
                 },
-                "birthday": {
+                "description": {
+                  "example": "any"
+                },
+                "unit": {
+                  "example": "any"
+                },
+                "unit_weight": {
+                  "example": "any"
+                },
+                "unit_cost": {
+                  "example": "any"
+                },
+                "stock": {
                   "example": "any"
                 }
               }
@@ -140,7 +164,7 @@
       },
       "delete": {
         "tags": [
-          "Members"
+          "Inventory"
         ],
         "description": "",
         "parameters": [
